syntax = "proto3";

package proto;

// block-wise matrix data service
service BlockData {
  rpc GetTShard(Request) returns (Response) {}
  rpc GetDShard(Request) returns (Response) {}
}

message Request {
  // uint64 epoch = 1;
  // repeated int32 indices = 2;
}

message Response {
  uint64 blockId = 1;
  MatrixShard shard = 2;
}

message MatrixShard {
  bool is_sparse = 1;
  uint32 m = 2;
  uint32 n = 3;
  repeated float val = 4;
  repeated uint32 ir = 5;
  repeated uint32 jc = 6;
}
